<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtInstrView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtFilterInstr" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/pickers"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_below="@id/txtInstrView"
        android:weightSum="100"
        android:gravity="center_horizontal">

        <DatePicker
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:layout_weight="50"/>

        <DatePicker
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:layout_weight="50"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txtKeyWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickers"
        android:layout_centerHorizontal="true"
        tools:text="@string/txtKeywordHint" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtKeyWord"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="btnFilterClicked"
        android:text="@string/btnTitleFilter" />
</RelativeLayout>