...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="41dp"
        android:onClick="btnNextClicked"
...
        android:layout_marginBottom="73dp"
        android:layout_marginStart="64dp"
        android:onClick="dispatchTakePictureIntent"
        android:text="@string/btnTitleSnap" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSnap"
        android:layout_marginEnd="108dp"
        android:onClick="btnSearchClicked"
...
